projects/dms/dms-master-service/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dms-master
  name: dms-master-svc
  namespace: dms-dev
spec:
  ports:
    - port: 8012
      protocol: TCP
      targetPort: 8012
  selector:
    app: dms-master
